--- a/app/views/renalware/medications/_peritonitis.html.slim
+++ b/app/views/renalware/medications/_peritonitis.html.slim
@@ -1,6 +1,6 @@
 .select-peritonitis-drug
-  = pm.label :medicatable_id, "Select Drug (common peritonitis drugs listed at the top)"
-  = pm.grouped_collection_select(:medicatable_id, Renalware::Drugs::Type.for(:peritonitis, :antibiotic), :drugs, :name, :id, :name)
+  = pm.label :drug_id, "Select Drug (common peritonitis drugs listed at the top)"
+  = pm.grouped_collection_select(:drug_id, Renalware::Drugs::Type.for(:peritonitis, :antibiotic), :drugs, :name, :id, :name)
 
 
   = pm.hidden_field :medicatable_type, value: "Renalware::Drugs::Drug", class: "selected-medicatable-type"
