--- a/app/views/renalware/medications/_show.html.slim
+++ b/app/views/renalware/medications/_show.html.slim
@@ -1,4 +1,4 @@
 dl.accordion
   dd.accordion-navigation.med-form
-    span class="drug-#{drug_types_colour_tag(pm.object.medicatable.drug_types)}"
-      = "#{pm.object.medicatable.name}, #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{l pm.object.start_date}"
+    span class="drug-#{drug_types_colour_tag(pm.object.drug.drug_types)}"
+      = "#{pm.object.drug.name}, #{pm.object.dose}, #{pm.object.medication_route.name}, #{pm.object.frequency}, #{l pm.object.start_date}"
