--- a/app/views/renalware/polymorphic_medications/_table.html.slim
+++ b/app/views/renalware/polymorphic_medications/_table.html.slim
@@ -12,7 +12,7 @@ table
           = pipe_separator
           = link_to "Terminate", medication_path(medication), method: :delete,
               remote: true, data: { confirm: "Are you sure?" }
-        td= medication.medicatable.name
+        td= medication.drug.name
         td= medication.medication_route.name == 'Route: Other (Please specify in notes)' ? medication.medication_route.full_name : medication.medication_route.name
 
 .right
