--- a/app/views/renalware/polymorphic_medications/_index.html.slim
+++ b/app/views/renalware/polymorphic_medications/_index.html.slim
@@ -1,7 +1,7 @@
 #medications
   = render "renalware/polymorphic_medications/table",
       treatable: treatable,
-      medications: @exit_site_infection.medications
+      medications: medications
 
 = render "renalware/polymorphic_medications/form",
     treatable: treatable,
