--- a/app/views/renalware/peritonitis_episodes/_form.html.slim
+++ b/app/views/renalware/peritonitis_episodes/_form.html.slim
@@ -3,18 +3,9 @@
   = pe.hidden_field :patient_id
 
   = field_set_tag "Dates" do
-    .row
-      .large-4.columns
-        = pe.label :diagnosis_date
-        = pe.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
-
-      .large-4.columns
-        = pe.label :treatment_start_date
-        = pe.date_select(:treatment_start_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year], include_blank: true }, class: "datetime")
-
-      .large-4.columns
-        = pe.label :treatment_end_date
-        = pe.date_select(:treatment_end_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year], include_blank: true }, class: "datetime")
+     = pe.input :diagnosis_date, as: :date_picker, label: "Diagnosed on"
+     = pe.input :treatment_start_date, as: :date_picker, label: "Treatment start on"
+     = pe.input :treatment_end_date, as: :date_picker, label: "Treatment end on"
 
   .row
     .large-12.columns
