--- a/app/views/renalware/peritonitis_episodes/new.html.slim
+++ b/app/views/renalware/peritonitis_episodes/new.html.slim
@@ -1,7 +1,7 @@
 = render layout: "renalware/patients/layout", locals: { title: "Peritonitis Episode", patient: @patient } do
   = render partial: "renalware/shared/errors", locals: { model: @peritonitis_episode }
 
-  = nested_form_for [@patient, @peritonitis_episode] do |pe|
+  = simple_nested_form_for [@patient, @peritonitis_episode] do |pe|
     = render partial: 'renalware/peritonitis_episodes/form', locals: { pe: pe }
 
     = submit_tag "Save", class: "button"
