--- a/app/views/renalware/transplants/recipient_operations/_operation.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_operation.html.slim
@@ -4,7 +4,7 @@ ruby:
     :donor_kidney_removed_from_ice_at,
     :kidney_perfused_with_blood_at,
     :operation_type,
-    :hospital,
+    :hospital_centre,
     :cold_ischaemic_time_formatted,
     :warm_ischaemic_time_formatted,
     :notes]
