--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -12,6 +12,8 @@ li.has-dropdown
         = link_to "PD Bags", bag_types_path
       li
         = link_to "Doctors", doctors_path
+      li
+        = link_to "Hospital Units", hospitals_units_path
 
     - if current_user_is_admin?
       li
