--- a/app/views/renalware/polymorphic_medications/_table.html.slim
+++ b/app/views/renalware/polymorphic_medications/_table.html.slim
@@ -8,12 +8,12 @@ table
     - medications.each do |medication|
       tr
         td
-          = link_to "Edit", edit_medication_path(medication), remote: true
+          = link_to "Edit", edit_patient_medication_path(patient, medication), remote: true
           = pipe_separator
-          = link_to "Terminate", medication_path(medication), method: :delete,
+          = link_to "Terminate", patient_medication_path(patient, medication), method: :delete,
               remote: true, data: { confirm: "Are you sure?" }
         td= medication.drug.name
         td= medication.medication_route.name == 'Route: Other (Please specify in notes)' ? medication.medication_route.full_name : medication.medication_route.name
 
 .right
-  = link_to "Add Medication", new_medication_path(treatable), remote: true, class: %i(button tiny)
+  = link_to "Add Medication", new_patient_medication_path(patient, treatable), remote: true, class: %i(button tiny)
