--- a/app/views/renalware/polymorphic_medications/new.js.erb
+++ b/app/views/renalware/polymorphic_medications/new.js.erb
@@ -1,6 +1,7 @@
 $("#medications").html("<%= escape_javascript(
   render "form", medication: @medication,
+    patient: @patient,
     treatable: @treatable,
-    url: medications_path(@treatable)
+    url: patient_medications_path(@patient, @treatable)
 ) %>");
 initDatepickersIn("#medications");
