--- a/app/views/renalware/polymorphic_medications/update.js.erb
+++ b/app/views/renalware/polymorphic_medications/update.js.erb
@@ -1,11 +1,12 @@
 <% if @medication.valid? %>
   $("#medications").html("<%= escape_javascript(
-    render "table", treatable: @treatable, medications: @treatable.medications
+    render "table", patient: @patient, treatable: @treatable, medications: @treatable.medications
   ) %>");
 
 <% else %>
   $("<%= dom_id(@medication, "#edit")%>").replaceWith("<%= escape_javascript(
-    render "form", medication: @medication, url: medication_path(@medication)
+    render "form", patient: @patient, medication: @medication,
+      url: patient_medication_path(@patient, @medication)
    ) %>");
   initDatepickersIn("#medications");
 
