Fix broken javascript for association drugs rename #384

--- a/app/views/renalware/polymorphic_medications/_form.html.slim
+++ b/app/views/renalware/polymorphic_medications/_form.html.slim
@@ -21,7 +21,7 @@
 
         ul.drug-results.no-bullet
 
-        = f.hidden_field :drug_id, class: "selected-medicatable-id"
+        = f.hidden_field :drug_id, class: "selected-drug-id"
 
       /! Show only when selecting drugs by category/type.
       .drug-by-select
