--- a/app/views/renalware/medications/index.js.erb
+++ b/app/views/renalware/medications/index.js.erb
@@ -1,3 +1,3 @@
 $("#medications").html("<%= escape_javascript(
-  render "table", treatable: @treatable, medications: @medications
+  render "table", patient: @patient, treatable: @treatable, medications: @medications
 ) %>");
