Simplify render syntax

--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -3,13 +3,13 @@
 
   .med-form.content id=("edit-meds-#{f.object.id}" )
     - if f.object.treatable_type == "Renalware::PeritonitisEpisode"
-      = render partial: "renalware/medications/drug_select/peritonitis_fields", locals: { f: f }
+      = render "renalware/medications/drug_select/peritonitis_fields", f: f
 
     - elsif f.object.treatable_type == "Renalware::ExitSiteInfection"
-      = render partial: "renalware/medications/drug_select/exit_site_fields", locals: { f: f }
+      = render "renalware/medications/drug_select/exit_site_fields", f: f
 
     - else
-      = render partial: "renalware/medications/drug_select/default_fields", locals: { f: f }
+      = render "renalware/medications/drug_select/default_fields", f: f
 
     /! Same for both
     = f.input :dose
