Add sorting to patient’s medications list

--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -2,4 +2,4 @@
   = render "index",
       patient: @patient,
       treatable: @patient,
-      medications: @patient.medications
+      medications: @medications
