--- a/app/views/renalware/medications/_table.html.slim
+++ b/app/views/renalware/medications/_table.html.slim
@@ -1,14 +1,14 @@
 table
   thead
     tr
-      td
-      td Medication
-      td Drug Type
-      td Dose
-      td Frequency
-      td Route
-      td Provider
-      td Prescribed on
+      th
+      th= sort_link(@q, :drug_name, "Medication")
+      th Drug Type
+      th Dose
+      th Frequency
+      th Route
+      th Provider
+      th= sort_link(@q, :start_date, "Prescribed on")
   tbody
     - medications.each do |medication|
       tr
