--- a/app/views/renalware/admin/user_mailer/approval.text.erb
+++ b/app/views/renalware/admin/user_mailer/approval.text.erb
@@ -1,3 +1,3 @@
-Dear <%= @user.to_s(:full_name) %>
+Dear <%= @user.full_name %>
 
 Thanks for registering with Renalware. You've been authorised with the role(s): <%= @user.role_names.map(&:humanize).join(', ') %>.
