Added links in main navigation for admin users to preview emails.

--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -16,3 +16,8 @@ li.has-dropdown
     - if current_user_is_admin?
       li
         = link_to 'Users', admin_users_path
+      li
+        = link_to 'Preview Approval Emails', "rails/mailers/renalware/admin/user_mailer/approval"
+      li
+        = link_to 'Preview Unexpiry Emails', "rails/mailers/renalware/admin/user_mailer/unexpiry"
+
