--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -16,8 +16,6 @@ li.has-dropdown
     - if current_user_is_admin?
       li
         = link_to 'Users', admin_users_path
+    - unless Rails.env.production?
       li
-        = link_to 'Preview Approval Emails', "rails/mailers/renalware/admin/user_mailer/approval"
-      li
-        = link_to 'Preview Unexpiry Emails', "rails/mailers/renalware/admin/user_mailer/unexpiry"
-
+        = link_to "Email Templates", system_email_templates_path
