--- a/app/views/renalware/patients/_side_nav.html.slim
+++ b/app/views/renalware/patients/_side_nav.html.slim
@@ -12,7 +12,7 @@ ul.side-nav
   li.divider
   li.heading Regimes
   li= link_to_if display_pd_menu(@patient.modalities.with_deleted), "PD", patient_pd_summary_path(@patient)
-  li= link_to_if true, "HD", "#"
+  li= link_to_if display_hd_menu(@patient.modalities.with_deleted), "HD", patient_hd_dashboard_path(@patient)
   li.divider
   li.heading Transplants
   - if @patient.current_modality_live_donor?
