--- a/app/views/renalware/hd/preference_sets/_summary.html.slim
+++ b/app/views/renalware/hd/preference_sets/_summary.html.slim
@@ -4,18 +4,24 @@ fieldset
   .row
     - if @preference_set.persisted?
       .large-3.columns
-        dt Schedule:
-        dd= @preference_set.schedule
+        dl
+          dt Schedule:
+          dd
+            - if @preference_set.schedule.other?
+              = @preference_set.other_schedule
+            - else
+              = @preference_set.schedule.text
 
       .large-3.columns
-        dt Unit:
-        dd TBD
+        dl
+          dt Unit:
+          dd= @preference_set.hospital_unit
 
       .large-4.columns
         dl
           dt Last Update:
           dd
-            - if false && version = @preference_set.versions.last
+            - if version = @preference_set.versions.last
               = l version.created_at
               | &nbsp;by&nbsp;
               = who_did_it version
