--- a/app/views/renalware/hd/preference_sets/_form.html.slim
+++ b/app/views/renalware/hd/preference_sets/_form.html.slim
@@ -11,6 +11,8 @@ ruby:
         group_method: :hd_sites,
         collection: Renalware::Hospitals::Centre.with_hd_sites.ordered,
         label_method: :to_s
+    = f.input :entered_on, as: :date_picker
+    = f.input :notes, as: :text, input_html: { rows: 5 }
 
 .row
   .large-12.columns
