--- a/app/views/renalware/hd/preference_sets/_summary.html.slim
+++ b/app/views/renalware/hd/preference_sets/_summary.html.slim
@@ -1,8 +1,8 @@
 fieldset
   legend Preferences
 
-  .row
-    - if @preference_set.persisted?
+  - if @preference_set.persisted?
+    .row
       .large-3.columns
         dl
           dt Schedule:
@@ -19,18 +19,28 @@ fieldset
 
       .large-4.columns
         dl
+          dt Entered On:
+          dd= @preference_set.entered_on
+
+      .large-2.columns
+        .right
+          = link_to "Edit", edit_patient_hd_preference_set_path(@patient), class: "button tiny"
+    .row
+      .large-6.columns
+        dl
+          dt Notes:
+          dd= simple_format @preference_set.notes
+
+      .large-6.columns
+        dl
           dt Last Update:
           dd
             - if version = @preference_set.versions.last
               = l version.created_at
               | &nbsp;by&nbsp;
               = who_did_it version
-
-      .large-2.columns
-        .right
-          = link_to "Edit", edit_patient_hd_preference_set_path(@patient), class: "button tiny"
-    - else
-      .call-to-action
-        = link_to edit_patient_hd_preference_set_path(@patient) do
-          i.fa.fa-plus-circle
-          | Enter preferences
+  - else
+    .call-to-action
+      = link_to edit_patient_hd_preference_set_path(@patient) do
+        i.fa.fa-plus-circle
+        | Enter preferences
