First draft of the HD profile form

--- a/app/views/renalware/hd/preference_sets/_summary.html.slim
+++ b/app/views/renalware/hd/preference_sets/_summary.html.slim
@@ -15,13 +15,13 @@ fieldset
 
       .large-3.columns
         dl
-          dt Unit:
-          dd= @preference_set.hospital_unit
+          dt Hospital Centre:
+          dd= @preference_set.hospital_centre
 
       .large-4.columns
         dl
-          dt Entered On:
-          dd= @preference_set.entered_on
+          dt Unit:
+          dd= @preference_set.hospital_unit
 
       .large-2.columns
         .right
