--- a/app/views/renalware/hd/dashboards/show.html.slim
+++ b/app/views/renalware/hd/dashboards/show.html.slim
@@ -1,2 +1,3 @@
 = render layout: "renalware/patients/layout", locals: { title: "HD Summary" } do
+  = render "renalware/hd/profiles/summary"
   = render "renalware/hd/preference_sets/summary"
