--- a/app/assets/stylesheets/renalware/navigation.css.scss
+++ b/app/assets/stylesheets/renalware/navigation.css.scss
@@ -78,9 +78,12 @@ dd.patient-name {
 
 .patient-side-nav {
   background-color: #FAFAFA;
-  ul.side-nav li a {
-    padding-top: 0;
-    padding-bottom: 0;
+  ul.side-nav li.link {
+    padding-left: 0.875rem;
+
+    a {
+      padding: 0;
+    }
   }
 
   li.divider {
