Add cannulation type CRUD

--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -18,6 +18,8 @@ li.has-dropdown
         = link_to 'Users', admin_users_path
       li
         = link_to "Hospital Units", hospitals_units_path
+      li
+        = link_to "HD Cannulation Types", hd_cannulation_types_path
     - unless Rails.env.production?
       li
         = link_to "Email Templates", system_email_templates_path
