--- a/app/views/renalware/hd/preference_sets/_form.html.slim
+++ b/app/views/renalware/hd/preference_sets/_form.html.slim
@@ -16,6 +16,6 @@ ruby:
 
 .row
   .large-12.columns
-    = f.submit 'Save', class: 'button'
+    = f.button :submit
     span= " or "
     = link_to 'cancel', back_path
