--- a/app/views/renalware/hd/dialysers/new.html.slim
+++ b/app/views/renalware/hd/dialysers/new.html.slim
@@ -1,12 +1,1 @@
-.row
-  = render "header"
-  = render partial: "renalware/shared/errors", locals: { model: @dialyser }
-
-.row
-  .large-6.columns
-    = simple_form_for @dialyser do |f|
-      = render "form", f: f
-
-      = submit_tag "Save", class: "button"
-      span= " or "
-      = link_to "cancel", hd_dialysers_path
+= render "form"
