--- a/app/views/renalware/hd/profiles/_form.html.slim
+++ b/app/views/renalware/hd/profiles/_form.html.slim
@@ -10,7 +10,7 @@ ruby:
 
 .row.top
   .medium-6.columns
-    = f.submit "Save", class: "button"
+    = f.button :submit
     span= " or "
     = link_to "cancel", back_path
 
@@ -90,6 +90,6 @@ ruby:
 
 .row
   .large-12.columns
-    = f.submit 'Save', class: 'button'
+    = f.button :submit
     span= " or "
     = link_to 'cancel', back_path
