--- a/app/views/renalware/hospitals/units/new.html.slim
+++ b/app/views/renalware/hospitals/units/new.html.slim
@@ -1,12 +1,1 @@
-.row
-  = render 'header'
-  = render partial: "renalware/shared/errors", locals: { model: @hospital_unit }
-
-.row
-  .large-6.columns
-    = simple_form_for @hospital_unit do |f|
-      = render "form", f: f
-
-      = submit_tag "Save", class: "button"
-      span= " or "
-      = link_to "cancel", hospitals_units_path
+= render "form"
