--- a/app/views/renalware/hd/profiles/_summary.html.slim
+++ b/app/views/renalware/hd/profiles/_summary.html.slim
@@ -1,7 +1,12 @@
 fieldset
   legend HD Profile
 
-  - if @profile.persisted?
+  - if @profile.new_record?
+    .call-to-action
+      = link_to edit_patient_hd_profile_path(@patient) do
+        i.fa.fa-plus-circle
+        | Enter profile
+  - else
     .row
       .large-3.columns
         dl
@@ -47,8 +52,3 @@ fieldset
               = l version.created_at
               | &nbsp;by&nbsp;
               = who_did_it version
-  - else
-    .call-to-action
-      = link_to edit_patient_hd_profile_path(@patient) do
-        i.fa.fa-plus-circle
-        | Enter profile
